@@ -1,0 +1,15 @@
+module.exports = {
+    "modeSupport": [
+        "multiplayer",
+        "singleplayer",
+    ],
+    "type": "dirfiles",
+    "value": [
+        "'-ini'",
+        "value[0]"
+    ],
+    "label": "User INI",
+    "path": "**/*.ini",
+    "description": "Participants must have a copy of this file in their own path",
+    "optional": true
+}
